home/Deployments/technically-fun/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: technically-fun-svc
  namespace: technically-fun-system
  labels:
    app: technically-fun-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: technically-fun-app
