home/Deployments/technically-fun/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technically-fun-ingress
  namespace: technically-fun-system
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  rules:
  - host: technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technically-fun-svc
            port:
              number: 80
